# domain-modelling-workshop

./: CHANGELOG.md  Makefile  README.md  cabal.project  cabal.project.freeze  domain-modelling.cabal
.github/workflows/: ci.yml  linting.yml
app/: Main.hs
src/: Price.hs  PricingState.hs  Types.hs  Validation.hs
src/Types/: Command.hs  Event.hs  EventType.hs  Payloads.hs
test/: Main.hs  Utils.hs
