cabal-version:   3.4
name:            domain-modelling
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with: GHC == 9.4.5


common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    -Wunused-packages

common common-extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import:           warnings
  import:           common-extensions
  exposed-modules:
    Price
    Types
    Validation

  build-depends:
    , aeson
    , base            ^>=4.17.0.0
    , bytestring
    , deriving-aeson
    , text
    , time
    , twain

  hs-source-dirs:   src
  default-language: GHC2021

executable domain-modelling
  import:           warnings
  import:           common-extensions
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base              ^>=4.17.0.0
    , domain-modelling
    , http-types
    , text
    , twain
    , warp
    , time

  hs-source-dirs:   app
  default-language: GHC2021

test-suite domain-modelling-test
  import:           warnings
  import:           common-extensions
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , aeson
    , base              ^>=4.17.0.0
    , bytestring
    , domain-modelling
    , tasty
    , tasty-hunit
    , text
