cabal-version:   3.4
name:            domain-modelling
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.5

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    -Wunused-packages

common common-extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import:           warnings
  import:           common-extensions

  -- cabal-fmt: expand src/
  exposed-modules:
    Price
    PricingState
    Types
    Types.Command
    Types.Event
    Types.EventType
    Types.Payloads
    Validation

  build-depends:
    , aeson
    , base            ^>=4.17.1.0
    , deriving-aeson
    , effectful-core
    , text
    , time
    , twain

  hs-source-dirs:   src
  default-language: GHC2021

executable domain-modelling
  import:           warnings
  import:           common-extensions
  main-is:          Main.hs
  build-depends:
    , aeson
    , base              ^>=4.17.1.0
    , domain-modelling
    , http-types
    , text
    , time
    , twain
    , wai-extra
    , warp

  hs-source-dirs:   app
  default-language: GHC2021

test-suite domain-modelling-test
  import:           warnings
  import:           common-extensions
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  other-modules:    Utils
  main-is:          Main.hs
  build-depends:
    , aeson
    , aeson-qq
    , base              ^>=4.17.1.0
    , bytestring
    , domain-modelling
    , hedgehog
    , optics-core
    , pretty-simple
    , tasty
    , tasty-hunit
    , text
    , time
